build-logs-failed/build-deps-pipes-fluid-0.6.0.1.log
Resolving dependencies...
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - pipes-concurrency-2.0.14 (lib) (requires build)
 - pipes-extras-1.0.15 (lib) (requires build)
 - pipes-category-0.3.0.0 (lib) (requires build)
 - pipes-misc-0.5.0.0 (lib) (requires build)
Starting     pipes-concurrency-2.0.14 (lib)
Starting     pipes-extras-1.0.15 (lib)
Building     pipes-concurrency-2.0.14 (lib)
Building     pipes-extras-1.0.15 (lib)
Installing   pipes-extras-1.0.15 (lib)
Installing   pipes-concurrency-2.0.14 (lib)
Completed    pipes-extras-1.0.15 (lib)
Starting     pipes-category-0.3.0.0 (lib)
Completed    pipes-concurrency-2.0.14 (lib)
Building     pipes-category-0.3.0.0 (lib)
Installing   pipes-category-0.3.0.0 (lib)
Completed    pipes-category-0.3.0.0 (lib)
Starting     pipes-misc-0.5.0.0 (lib)
Building     pipes-misc-0.5.0.0 (lib)

Failed to build pipes-misc-0.5.0.0.
Build log (
/tmp/stackage-work/build-logs/ghc-9.6.6/pipes-misc-0.5.0.0-1b127cd51a70d20c85a1f861f635b359cbbb5267ce76167eaa1c8211e6f8d21f.log
):
Configuring library for pipes-misc-0.5.0.0...
Preprocessing library for pipes-misc-0.5.0.0...
Building library for pipes-misc-0.5.0.0...
[1 of 6] Compiling Pipes.Misc.Concurrent
[2 of 6] Compiling Pipes.Misc.State.Lazy

src/Pipes/Misc/State/Lazy.hs:13:13: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () a () a m2 () -> P.Pipe a a m r
   |
13 | store v s = forever $ do
   |             ^^^^^^^

src/Pipes/Misc/State/Lazy.hs:20:13: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () b0 () (b, b0) m1 () -> P.Pipe a (b, a) m r
   |
20 | restore v = forever $ do
   |             ^^^^^^^

src/Pipes/Misc/State/Lazy.hs:27:14: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () a0 () b m0 () -> P.Pipe () b m r
   |
27 | restore' v = forever $ do
   |              ^^^^^^^
[3 of 6] Compiling Pipes.Misc.State.Strict

src/Pipes/Misc/State/Strict.hs:12:13: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () a () a m2 () -> P.Pipe a a m r
   |
12 | store v s = forever $ do
   |             ^^^^^^^

src/Pipes/Misc/State/Strict.hs:19:13: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () b0 () (b, b0) m1 () -> P.Pipe a (b, a) m r
   |
19 | restore v = forever $ do
   |             ^^^^^^^

src/Pipes/Misc/State/Strict.hs:26:14: error: [GHC-88464]
    Variable not in scope:
      forever :: P.Proxy () a0 () b m0 () -> P.Pipe () b m r
   |
26 | restore' v = forever $ do
   |              ^^^^^^^
[4 of 6] Compiling Pipes.Misc.Util
[5 of 6] Compiling Pipes.Misc.Time
Error: [Cabal-7125]
Failed to build pipes-misc-0.5.0.0. See the build log above for details.

